test/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reaper-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - http:
      paths:
      - path: /webui/*
        backend:
          service:
            name: reaper-nodeport
            port:
              number: 8080
