test/reaper-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reaper
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: reaper-nodeport
              servicePort: 8080
            path: /webui/*
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 34.117.48.220
